@@ -4,8 +4,9 @@ use warnings;
 
 package TestSCRAM;
 
-use PBKDF2::Tiny qw/derive digest_fcn hmac/;
+use Encode qw/encode_utf8/;
 use MIME::Base64 qw/decode_base64/;
+use PBKDF2::Tiny qw/derive digest_fcn hmac/;
 
 use base 'Exporter';
 our @EXPORT = qw/get_client get_server get_cred check_proxy/;
@@ -15,8 +16,9 @@ my ( $sha1, $sha1_block ) = digest_fcn('SHA-1');
 # username => [ base64-salt, password, iterations ]
 # entry 'user' matches example from RFC 5802
 my %CRED_INPUTS = (
-    user    => [ 'QSXCR+Q6sek8bf92', 'pencil',       4096 ],
-    johndoe => [ 'saltSALTsaltSALT', 'passPASSpass', 4096 ],
+    user                => [ 'QSXCR+Q6sek8bf92', 'pencil',                 4096 ],
+    johndoe             => [ 'saltSALTsaltSALT', 'passPASSpass',           4096 ],
+    "johnd\N{U+110B}oe" => [ 'salt',             "pass\N{U+110B}PASSpass", 4096 ],
 );
 
 # username => [ salt, stored key, server key, iterations ];
@@ -25,7 +27,7 @@ my %CRED;
 for my $user ( keys %CRED_INPUTS ) {
     my ( $salt, $pw, $i ) = @{ $CRED_INPUTS{$user} };
     $salt = decode_base64($salt);
-    my $salted_password = derive( 'SHA-1', $pw, $salt, $i );
+    my $salted_password = derive( 'SHA-1', encode_utf8($pw), $salt, $i );
     my $client_key = _hmac( $salted_password, "Client Key" );
     my $stored_key = $sha1->($client_key);
     my $server_key = _hmac( $salted_password, "Server Key" );
@@ -33,7 +35,10 @@ for my $user ( keys %CRED_INPUTS ) {
 }
 
 # username (can act as) authz_id
-my %VALID_PROXY = ( johndoe => 'admin' );
+my %VALID_PROXY = (
+    johndoe             => 'admin',
+    "johnd\N{U+110B}oe" => "admi\N{U+110B}n"
+);
 
 sub _hmac {
     my ( $key, $data ) = @_;
